# wws-fastapi

./: .gitignore  Dockerfile  docker-compose.yaml  pyproject.toml
.github/workflows/: main_wws-fastapi.yml
app/: main.py
app/models/: bull.py  proof.py
app/routers/: bull.py  proof.py
app/services/: bull.py  config.json  database.py  proof.py
